src/objects/Practitioner_Licence__c.object
<CustomObject>
    <fields>
        <fullName>Acquisition_Date__c</fullName>
        <label>Acquisition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Practitioner Licence</relationshipLabel>
        <relationshipName>Practitioner_Licence</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <formula>Expiry_Date__c  &gt;  TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Licence_Type__c</fullName>
        <label>Licence Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Practitioner Licence</label>
    <nameField>
        <label>Practitioner Licence Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Practitioner Licence</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>